--- a/src/app.html
+++ b/src/app.html
@@ -6,8 +6,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
-	<!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "eb1b65213e33463e88b10a85f0e4dbf6"}'></script><!-- End Cloudflare Web Analytics -->
-	<body data-sveltekit-preload-data="hover">
+	<script defer src="https://cloud.umami.is/script.js" data-website-id="b9f5acbd-b5c8-4cf7-a6ef-3c3d2dbe285b"></script>
+		<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
